# Pictor

./: .gitignore  CMakeLists.txt  README.md  plan.md
.github/workflows/: claude-code-review.yml  claude.yml
benchmark/: main.cpp
cmake/: FindRive.cmake
demo/: main.cpp
demo/benchmark/: main.cpp
demo/fbx/: main.cpp
demo/fbx_viewer/: main.cpp
demo/fbx_viewer/shaders/: bone.vert  model.frag  model.vert
demo/graphics/: main.cpp
demo/graphics/shaders/: pbr_demo.frag  pbr_demo.vert
demo/material_serializer/: main.cpp
demo/mobile/: main.cpp
demo/mobile/profiles/: mobile_custom.ini
demo/ocean/: main.cpp
demo/ocean/shaders/: ocean.frag  ocean.tesc  ocean.tese  ocean.vert  ocean_wireframe.frag
demo/postprocess/: main.cpp
demo/postprocess/shaders/: pp_demo_scene.frag  pp_demo_scene.vert
demo/rive/: main.cpp
demo/rive_cube/: main.cpp
demo/rive_cube/shaders/: rive_cube.frag  rive_cube.vert
demo/shaders/: text_overlay.frag  text_overlay.vert
demo/text/: main.cpp
demo/text/shaders/: text_quad.frag  text_quad.vert
demo/text_effects/: main.cpp
demo/texture2d/: main.cpp  texture2d_renderer.cpp  texture2d_renderer.h
demo/texture2d/shaders/: texture2d.frag  texture2d.vert
demo/webgl/: main.cpp  shell.html
docs/: android-build.md
docs/api/: classes.md  interfaces.md
docs/demos/: demo_guide.docx  demo_guide.md  demo_guide.pptx  generate_docs.py
docs/design/: webgl_backend.md
fbx/: .gitignore  README.md
fbx/model1/: LICENSE.md
graphics_demo/: main.cpp
include/pictor/: c_api.h  pictor.h
include/pictor/animation/: animation_2d.h  animation_clip.h  animation_system.h  animation_types.h  bvh_importer.h  fbx_document.h  fbx_importer.h  fbx_scene.h  ik_solver.h  lottie_animation.h  motion_estimator.h  rive_animation.h  skeleton.h  skinned_vertex.h  vector_animation.h
include/pictor/batch/: batch_builder.h  radix_sort.h
include/pictor/core/: mobile_lifecycle.h  pictor_renderer.h  types.h
include/pictor/culling/: culling_system.h  flat_bvh.h  world_partition.h
include/pictor/data/: data_handler.h  data_query_api.h  model_data_handler.h  model_data_types.h  texture_registry.h  vertex_data_uploader.h
include/pictor/gi/: gi_bake.h  gi_lighting_system.h
include/pictor/gpu/: gpu_buffer_manager.h  gpu_driven_pipeline.h
include/pictor/material/: base_material_builder.h  material_property.h  material_serializer.h
include/pictor/memory/: frame_allocator.h  gpu_memory_allocator.h  memory_subsystem.h  pool_allocator.h
include/pictor/pipeline/: command_encoder.h  pipeline_builder.h  pipeline_profile.h  render_pass_scheduler.h
include/pictor/postprocess/: bloom_effect.h  depth_of_field_effect.h  gaussian_blur_effect.h  postprocess_effect.h  postprocess_pipeline.h  tone_mapping_effect.h
include/pictor/profiler/: bitmap_font.h  bitmap_text_renderer.h  cpu_timer.h  data_exporter.h  gpu_timer.h  (+3 more)
review/: latest.json
review/2026-05-13/: AUTOFIX.md  REVIEW.md  REVIEW_DESIGN.md  REVIEW_IMPLEMENTATION.md  REVIEW_MISSING_FEATURES.md  REVIEW_QUALITY.md  REVIEW_VULNERABILITY.md  latest.json
review/2026-05-15/: AUTOFIX.md  REVIEW.md  REVIEW_DESIGN.md  REVIEW_IMPLEMENTATION.md  REVIEW_MISSING_FEATURES.md  REVIEW_QUALITY.md  REVIEW_VULNERABILITY.md
shaders/: common.glsl  compact_draw.comp  compute_cull.comp  compute_update.comp  gi_probe_sample.comp  hiz_build.comp  hologram.frag  hologram.vert  lightmap_bake.comp  lit.frag  lit.vert  lod_select.comp  pbr.frag  pbr.vert  shadow.glsl  shadow_depth.frag  shadow_depth.vert  shadow_map_gen.comp  simple_inst.frag  simple_inst.vert  skeletal_anim.comp  ssao_gen.comp  static_ao_bake.comp  toon.frag  toon.vert
shaders/postprocess/: bloom_composite.frag  bloom_downsample.comp  bloom_extract.comp  bloom_upsample.comp  dof.comp  fullscreen_quad.vert  gaussian_blur.comp  tone_mapping.frag
shaders/ui/: ui_overlay.frag  ui_overlay.vert
shaders/webgl/: basic.frag  basic.vert  instanced.frag  instanced.vert
src/animation/: animation_2d.cpp  animation_clip.cpp  animation_system.cpp  bvh_importer.cpp  fbx_document.cpp  fbx_importer.cpp  fbx_scene.cpp  ik_solver.cpp  lottie_animation.cpp  motion_estimator.cpp  rive_animation.cpp  skeleton.cpp  vector_animation.cpp
src/batch/: batch_builder.cpp  radix_sort.cpp
src/c_api/: c_api.cpp
src/core/: pictor_renderer.cpp  types.cpp
src/culling/: culling_system.cpp  flat_bvh.cpp  frustum_culler.cpp  world_partition.cpp
src/data/: data_handler.cpp  data_query_api.cpp  model_data_handler.cpp  texture_registry.cpp  vertex_data_uploader.cpp
src/gi/: gi_bake.cpp  gi_lighting_system.cpp
src/gpu/: gpu_buffer_manager.cpp  gpu_driven_pipeline.cpp
src/material/: base_material_builder.cpp  material_serializer.cpp
src/memory/: frame_allocator.cpp  gpu_memory_allocator.cpp  memory_subsystem.cpp  pool_allocator.cpp
src/pipeline/: command_encoder.cpp  pipeline_builder.cpp  pipeline_profile.cpp  render_pass_scheduler.cpp
src/postprocess/: bloom_effect.cpp  depth_of_field_effect.cpp  gaussian_blur_effect.cpp  postprocess_pipeline.cpp  tone_mapping_effect.cpp
src/profiler/: bitmap_text_renderer.cpp  cpu_timer.cpp  data_exporter.cpp  gpu_timer.cpp  overlay_renderer.cpp  profiler.cpp  stats_overlay.cpp
src/scene/: object_classifier.cpp  object_pool.cpp  scene_registry.cpp  soa_stream.cpp
src/surface/: glfw_surface_provider.cpp  simple_renderer.cpp  vulkan_context.cpp
src/text/: font_loader.cpp  glyph_path_effects.cpp  text_effects.cpp  text_image_renderer.cpp  text_rasterizer.cpp  text_svg_renderer.cpp
src/ui/: screen_overlay_group.cpp  ui_overlay_pipeline.cpp
src/update/: job_dispatcher.cpp  update_scheduler.cpp
src/vector/: rive_renderer.cpp
src/webgl/: webgl_buffer.cpp  webgl_context.cpp  webgl_renderer.cpp  webgl_shader.cpp
tests/: CMakeLists.txt  fps_baseline_test.cpp  pixel_text_test.cpp  test_common.h  unit_culling_test.cpp  unit_frame_allocator_test.cpp  unit_radix_sort_test.cpp
tools/feature-selector/: README.md  app.js  features.js  index.html  style.css
tools/material-editor/: README.md  app.js  index.html  schema.js  style.css
(+26 files in other folders)
